disabled CSRF, added flyway + db migration files according to FDA drug db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,16 @@ spring.datasource.username=meditracker_user
 spring.datasource.password=meditracker_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+# we are gonna be disabling hibernate since we will be using flyway for db migrations
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Fly way
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+
 
 server.port=8080
 
