--- a/pom.xml
+++ b/pom.xml
@@ -120,12 +120,27 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- JSON/JSONB mapping: using a custom AttributeConverter, no external hibernate-types dependency -->
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+
+        <!-- Flyway -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
